# mcaplib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
script/: lz4.cmake  zstd.cmake
src/: main.cpp
